# edgeviewer

./: README.md
android/: README.md  build.gradle  settings.gradle
android/app/: build.gradle
android/app/src/main/cpp/: CMakeLists.txt  native-lib.cpp  opencv_processor.cpp  opencv_processor.h
android/app/src/main/java/com/example/edgeviewer/: CameraActivity.kt  JniBridge.kt  MainActivity.kt
android/app/src/main/res/layout/: activity_main.xml
android/gl/: GLRenderer.kt
web/: index.html  main.ts  tsconfig.json
